# dotchatbot

./: .dotchatbot-history  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
client/: __init__.py  client_registry.py  openai.py  service_client.py
dotchatbot/: dcb.py
dotchatbot/input/: parser.py
dotchatbot/output/: file.py
output/: __init__.py  markdown.py
parser/: __init__.py  transformer.py
scripts/: update_readme.py
src/: main.py
src/dotchatbot/: __about__.py  cli.py
src/dotchatbot/client/: __init__.py  openai.py  services.py
src/dotchatbot/output/: __init__.py  file.py  markdown.py
src/dotchatbot/parser/: __init__.py  transformer.py
tests/: __init__.py
