[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotchatbot"
version = "0.1.0"
description = "Chatbot CLI"
authors = [
    { name="Brian Payne", email="bwpayne@gmail.com" }
]
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "click",
  "keyring",
  "click_extra",
  "rich",
  "lark",
  "openai",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[project.urls]
"Homepage" = "https://github.com/bayne/dotchatbot"

[project.scripts]
dcb = "dotchatbot.cli:main"

[tool.mypy]
allow_redefinition = true
disallow_untyped_defs = true
